<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layout_margin="@dimen/app_margin"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:showDividers="middle"
        android:divider="@drawable/empty_tall_divider"
        android:layout_marginTop="@dimen/margin_32"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/flag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag_image_desc"
            android:src="@drawable/flaghu" />

        <ImageView
            android:id="@+id/flag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag_image_desc"
            android:src="@drawable/german" />

        <ImageView
            android:id="@+id/flag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag_image_desc"
            android:src="@drawable/danish" />

        <ImageView
            android:id="@+id/flag4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag_image_desc"
            android:src="@drawable/english" />

        <ImageView
            android:id="@+id/flag5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag_image_desc"
            android:src="@drawable/french" />

        <ImageView
            android:id="@+id/flag6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag_image_desc"
            android:src="@drawable/fin" />

        <ImageView
            android:id="@+id/flag7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flag_image_desc"
            android:src="@drawable/greece" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/button_add_word"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@color/addMainButton"
        android:text="@string/add_word_btn_label"
        app:layout_constraintBottom_toTopOf="@+id/button_training"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_training"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@color/trainingButton"
        android:text="@string/train_btn_label"
        app:layout_constraintBottom_toTopOf="@+id/button_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_word" />

    <Button
        android:id="@+id/button_history"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:background="@color/historyButton"
        android:text="@string/history_btn_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_training" />


</androidx.constraintlayout.widget.ConstraintLayout>